add image;continue format

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Landing Page Template</title>
+        <link rel="stylesheet" href="./style/style.css">
     </head>
     <body>
         <header>
-            <h1>Header Logo</h1>
-            <a class="link" href="#">header link one</a>
-            <a class="link" href="#">header link two</a>
-            <a class="link" href="#">header link three</a>
+            <h1 class="logo">Header Logo</h1>
+            <a class="header link" href="#">header link one</a>
+            <a class="header link" href="#">header link two</a>
+            <a class="header link" href="#">header link three</a>
         </header>
         <section class="hero">
             <div class="content">
@@ -17,7 +18,7 @@
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button><a class="link">Sign up</a></button>
             </div>
-            <img>
+            <img class="hero pic"src="./images/mountain.jpg">
         </section >
         <section class="cards">
             <div class="card-1">
